@@ -1,3 +1,11 @@
+Sat Mar  3 16:59:16 2001  Owen Taylor  <otaylor@redhat.com>
+
+	* gdk/gdkpango.h gdk/x11/gdkwindow-x11.c: Doc fixes
+
+	* gdk/win32/gdkinput.c (gdk_device_get_axis): Remove doc
+	comment. Won't do to have duplicated doc comments between
+	the platform subdirs.
+
 Sat Mar  3 16:26:33 2001  Owen Taylor  <otaylor@redhat.com>
 
 	* gdk/x11/gdkmain-x11.c gdk/x11/gdkkeys-x11.c 
